--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "bundle/colorscheme-candyvirus"]
 	path = bundle/colorscheme-candyvirus
 	url = https://github.com/ercolanelli-leo/candyVirus.git
+[submodule "bundle/dkg"]
+	path = bundle/dkg
+	url = https://github.com/davidgranstrom/vim-dkg.git
